# Saprana-project

./: .gitignore  CNAME  Cargo.toml  Forc.toml  asset-manifest.json  index.html  package-lock.json  package.json  readme.md
contract/: .gitignore  Cargo.toml  Forc.toml
contract/src/: main.sw
contract/tests/: harness.rs
contract/tests/local_tests/: buyer_test.rs  event_owner_test.rs  mod.rs
contract/tests/testnet_tests/: buy_ticket_test.rs  claim_test.rs  create_event_test.rs  deploy.rs  mod.rs
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/contract/: common.d.ts  index.ts
frontend/src/contracts/: SapranaAbi.d.ts
frontend/src/contracts/factories/: SapranaAbi__factory.ts
frontend/src/hooks/: useFuel.tsx  useIsConnected.tsx
indexer/: Cargo.toml  indexer.manifest.yaml  saprana-abi.json
indexer/schema/: indexer.schema.graphql
indexer/src/: lib.rs
nft-ticketing-indexer/: Cargo.toml  nft_ticketing_indexer.manifest.yaml  saprana-abi.json
nft-ticketing-indexer/schema/: nft_ticketing_indexer.schema.graphql
nft-ticketing-indexer/src/: lib.rs
saprana-indexer/: Cargo.toml  saprana_indexer.manifest.yaml
saprana-indexer/schema/: saprana_indexer.schema.graphql
saprana-indexer/src/: lib.rs
src/: App.tsx  index.css  interface.sw  main.sw
src/components/: Header.tsx  Tag.tsx  Text.tsx  Window.tsx
static/js/: main.1ef0f438.js  main.1ef0f438.js.map  main.701c3e74.js  main.701c3e74.js.map
tests/: harness.rs
