[package]
name = "saprana"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["Paul <zhpv96@gmail.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.41.1", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"

[dependencies]
chrono = "0.4.26"
dotenv = "0.15.0"
tai64 = "4.0.0"
